[make] Updating some make things

--- a/fx/Plasma/makefile
+++ b/fx/Plasma/makefile
@@ -10,6 +10,19 @@ LIBDIR  := ../lib/
 LIBS 	:= -lX11 -lXext $(LIBDIR)tinyPTCua/libTinyPtc.a
 INCDIRS := -I$(LIBDIR)tinyPTCua/src
 
+ifndef config
+	config=DEBUG
+endif
+
+ifeq ($(config),DEBUG)
+	CCFLAGS += -g
+else ifeq ($(config),RELEASE)
+	CCFLAGS += -o3
+else
+$(error "Invalid configuration $(config)")
+endif
+
+
 .PHONY: info
 
 ############################
