--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "g++ - Build and debug active file",
             "type": "cppdbg",
             "request": "launch",
-            "program": "${workspaceFolder}/fx/Plasma/plasma",
+            "program": "${workspaceFolder}/fx/Fire/fire",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
