--- a/fx/MK1/makefile
+++ b/fx/MK1/makefile
@@ -1,7 +1,7 @@
 ############################
 #### MAKE VARS
 ############################
-APP 	:= engine
+APP 	:= MK1
 CC 		:= g++
 CCFLAGS := -Wall -pedantic -std=c++20
 C		:= gcc
